# WayScreenPass

./: .editorconfig  .gitignore  CODING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PKGBUILD  PROGRESS.md  README.md  TEST_RESULTS.md  clippy.toml  connect-framework-vnc.sh  nftables-rules.conf
config/: remote-desktop.conf.example
crates/client/: Cargo.toml
crates/client/src/: clipboard.rs  connection.rs  decoder.rs  display.rs  input.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: encoder.rs  lib.rs  monitor.rs  pipewire.rs  protocol.rs
crates/portal/: Cargo.toml
crates/portal/src/: clipboard.rs  input.rs  lib.rs  session.rs
crates/server/: Cargo.toml
crates/server/src/: connection.rs  main.rs  setup.rs  status.rs  virtual_display.rs
crates/tray/: Cargo.toml
crates/tray/src/: config.rs  connection.rs  main.rs  tray.rs
docs/: PROTOCOL.md
systemd/: remote-desktop.service  remote-desktop.socket
