# Remote Desktop for Wayland - Workspace Configuration
#
# This is a Cargo workspace with multiple crates:
# - core: Shared library (monitor detection, protocol, encoder)
# - portal: Portal integration (ashpd, input injection)
# - server: Server binary (remote-desktop-server)
# - client: Client binary (remote-desktop)
#
# See CODING.md for file structure conventions.

[workspace]
members = ["crates/core", "crates/portal", "crates/server", "crates/client", "crates/tray"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your/remote-desktop-wayland"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Portal and PipeWire
ashpd = { version = "0.10", features = ["pipewire", "wayland"] }
pipewire = "0.8"

# DRM for monitor detection
drm = "0.6"

# Video encoding (software - unified for all GPUs)
ffmpeg-next = "8.0"

# Note: libei is not yet on crates.io
# For now, we'll define the input event structures
# Full libei integration can be added later when available

# Protocol (custom)
bytes = "1.7"
bincode = "1.3"
tokio-util = { version = "0.7", features = ["codec"] }

# D-Bus for KWin integration
zbus = "4.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
glob = "0.3"
async-trait = "0.1"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }

# Hashing for clipboard change detection
xxhash-rust = { version = "0.8", features = ["xxh3"] }
