[package]
name = "remote-desktop-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "remote-desktop"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
xxhash-rust = { workspace = true }

# Video decoding
ffmpeg-next = { workspace = true }

# Display and input (use system SDL2)
sdl2 = "0.37"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.crossterm]
version = "0.28"

# Local crates
[dependencies.remote-desktop-core]
path = "../core"
