[package]
name = "remote-desktop-portal"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
ashpd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
xxhash-rust = { workspace = true }
tempfile = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-misc = { workspace = true }
wayland-protocols-wlr = { workspace = true }
xkbcommon = { workspace = true }

# For chrono in session.rs
chrono = "0.4"
dirs = "5.0"
