[package]
name = "remote-desktop-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "remote-desktop-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
libc = "0.2"
dirs = "5.0"
which = "6.0"
image = { version = "0.25", default-features = false, features = ["png"] }

# Local crates
remote-desktop-core = { path = "../core" }
remote-desktop-portal = { path = "../portal" }

[dependencies.clap]
version = "4.5"
features = ["derive"]
