[package]
name = "remote-desktop-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "remote-desktop-tray"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System tray (StatusNotifierItem for KDE/Linux)
ksni = "0.2"

# TOML parsing
toml = "0.8"

# XDG directories
dirs = "5.0"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }
